force-app/main/default/objects/SFDC_Purchase_Order__c/SFDC_Purchase_Order__c.object-meta.xml
<CustomObject>
    <description>Track the lifestyle of a Purchase Order, as it starts as a purchase request and becomes a fully-approved PO. Associate this with a specific cost center and Invoices.</description>
    <label>Purchase Order</label>
    <nameField>
        <displayFormat>PO-{00000}</displayFormat>
        <label>Purchase Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>