force-app/main/default/objects/SFDC_Purchase_Order__c/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <label>Cost Center</label>
    <referenceTo>SFDC_Cost_Center__c</referenceTo>
    <relationshipName>R00N40000001Q7EwEAK</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>