force-app/main/default/objects/SFDC_Purchase_Order__c/fields/Purchase_Description__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Description__c</fullName>
    <label>Purchase Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>