force-app/main/default/objects/SFDC_Purchase_Order__c/fields/purchase_manager__c.field-meta.xml
<CustomField>
    <fullName>purchase_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N40000001Q7F4EAK</relationshipName>
    <type>Lookup</type>
</CustomField>