force-app/main/default/objects/SFDC_Purchase_Order__c/listViews/AllPurchaseOrders.listView-meta.xml
<ListView>
    <fullName>AllPurchaseOrders</fullName>
    <columns>NAME</columns>
    <columns>Vendor__c</columns>
    <columns>Type__c</columns>
    <columns>Amount__c</columns>
    <columns>Approved__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Purchase Orders</label>
</ListView>